force-app/main/default/objects/JBCXM__TransactionLines__c/JBCXM__TransactionLines__c.object-meta.xml
<CustomObject>
    <description>Transactions represent atomic financial transactions with a Customer. Detailed line items under each transaction is stored in the Trasnaction Lines object.</description>
    <label>Transaction Lines(Deprecated)</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Transaction Lines Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Lines(Deprecated)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>