force-app/main/default/objects/JBCXM__TransactionLines__c/fields/JBCXM__MRR__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__MRR__c</fullName>
    <description>MRR amount, calculated based on Booking Amount and Term</description>
    <inlineHelpText>MRR amount, calculated based on Booking Amount and Term</inlineHelpText>
    <label>MRR</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>