force-app/main/default/objects/JBCXM__TransactionLines__c/fields/JBCXM__TransactionLines__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__TransactionLines__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Transaction line item.</description>
    <inlineHelpText>Transaction line item.</inlineHelpText>
    <label>Transaction Lines</label>
    <referenceTo>JBCXM__TransactionType__c</referenceTo>
    <relationshipLabel>Transaction Lines</relationshipLabel>
    <relationshipName>TransactionLinesTL</relationshipName>
    <type>Lookup</type>
</CustomField>